# ATom-Bot

./: .gitignore  README.md
1.Hardware/: README.md
1.Hardware/head/: lcd-bom-html.html  lcd-bom.xlsx  main-bom.xlsx
2.Fimeware/ATom-Bot-Chassis/: .config  .cproject  project.uvoptx  project.uvprojx  rtconfig.h  rtthread.rbl  template.uvprojx
2.Fimeware/ATom-Chassis-bootloader/: .config  .cproject  rtconfig.h  rtconfig.py
2.Fimeware/ATom-Cube/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
2.Fimeware/ATom-Cube-Arduino/: platformio.ini
2.Fimeware/ATom-Cube/components/FastLEDShim/: CMakeLists.txt  FastLEDArduinoShim.cpp  FastLEDArduinoShim.h  esp32-hal.h
2.Fimeware/ATom-Cube/main/: CMakeLists.txt  main.cpp
2.Fimeware/ATom-Cube/main/include/: app_lcd.h  app_led.h  app_shell.h
2.Fimeware/ATom-Cube/main/src/: app_lcd.c  app_lcd.cpp  app_led.cpp
2.Fimeware/ATom-Cube/main/src/benchmark/: lv_demo_benchmark.h
2.Fimeware/ATom-Cube/main/src/mpu6050/: dmpmap.h  esp32_i2c_rw.c  esp32_i2c_rw.h  inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h  mpu6050.c  mpu6050.h  mpu6050_registers.h
2.Fimeware/ATom-Head/: CMakeLists.txt  README.md  idf.py命令.txt  partitions.csv  sdkconfig  sdkconfig.old
2.Fimeware/ATom-Head/main/: CMakeLists.txt  app_wifi.c  camera_sensor.c  camera_sensor.h  main.c  main.cpp
2.Fimeware/ATom-Head/main/include/: Display.h  Display_conf.hpp  app_apriltag.h  app_audio.h  app_camera.h  app_joint.h  app_lcd.h  app_player.h  app_rtsp.h  app_shell.h  app_speaker.h  app_speech.h  app_sr_handler.h  app_tcpserver.h  app_uart.h  app_ui.h  app_wifi.h  bsp_storage.h  file_manager.h  stream_server.h
2.Fimeware/ATom-Head/main/src/: app_ai_utils.cpp  app_apriltag.cpp  app_audio.c  app_camera.c  app_color_detection.cpp  app_face_detection.cpp  app_joint.c  app_lcd.c  app_lcd.cpp  app_net_remote.c  app_openai.c  app_player.c  app_player.cpp  app_rtsp.cpp  app_shell.c  app_speaker.c  app_speech.c  app_sr.c  app_sr_handler.c  app_tcpserver.c  app_uart.c  app_ui.cpp  app_wifi.c  bsp_spiffs.c  file_manager.c  normal_gif.c  stream_server.c  wakeup_gif.c
2.Fimeware/ATom-Head/main/src/cmd/: cmd_i2ctools.c
2.Fimeware/ATom-Head/main/src/gif/: angry_gif.c  emo_gif.c  happy_gif.c  hurt_gif.c  listen2normal_gif.c  listen_gif.c  listening_gif.c  normal2_gif.c  normal_gif.c  sad_gif.c  scared_gif.c  shake_gif.c  wakeup_gif.c
2.Fimeware/ATom-Head/main/src/rlottie/: lv_rlottie.c  lv_rlottie.h
2.Fimeware/ATom-Head/main/src/squareline_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
2.Fimeware/ATom-Head/main/src/squareline_ui/images/: ui_img_connect_fail_png.c  ui_img_connected_png.c  ui_img_head_png.c  ui_img_xyz_png.c
2.Fimeware/ATom-Head/main/src/squareline_ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
2.Fimeware/Atom-Bot-Button/: .config  .project  SConstruct  project.ewp  project.uvgui.rb  project.uvopt  project.uvoptx  project.uvproj  project.uvprojx  rtconfig.h  rtconfig.py  rtconfig_preinc.h  template.ewp  template.uvgui.rb  template.uvoptx  template.uvproj  template.uvprojx
2.Fimeware/ServoDrive-fw-hal/: .mxproject  (+1 more)
5.Docs/: 运行逻辑.drawio
(+437 files in other folders)
